# pdi-project

./: .gitignore  Dockerfile  INSTALL.md  Makefile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: gen_test_data.py  main.py  test.py
src/lib/: flink.py  mylogger.py  program.py
