[project]
name = "pdi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets==14.1",
    "apache-flink==1.20.0",
    "black==24.10.0",
    "aiofile>=3.9.0",
    "setuptools>=75.6.0",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
#log_cli_format = "%(levelname)8s: %(message)s (%(filename)s:%(lineno)s)"
#log_cli_format = "%(asctime)s %(levelname)s %(message)s"
#log_format = "%(asctime)s %(levelname)s %(message)s"
log_format = "%(levelname)s: %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:%S"
pythonpath = "src"
python_files = ["test*.py" ]
testpaths = ["tests", ]
addopts = [
    #    FIXME: When setuped cov then pycharm problem with debugging
    #    "--cov=src",
    #    "--cov-report=term:skip-covered",
    #    "--cov-report=html", # Allowed: term, term-missing, annotate, html, xml, json, lcov (multi-allowed)
    #    "--doctest-modules",
    #    "--durations=10",
]
